cabal-version:       2.4
name:                advent2021
version:             0.1.0.0
category:            None
synopsis:            Advent of Code 2021 Solutions
description:         These are my cleaned-up solutions to the Advent of Code
                     programming game. <https://adventofcode.com>
license:             ISC
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@gmail.com
copyright:           2021 Eric Mertens
homepage:            https://github.com/glguy/advent2021
bug-reports:         https://github.com/glguy/advent2021/issues
build-type:          Simple
data-files:          inputs/*.txt

source-repository head
  type: git
  location: https://github.com/glguy/advent2021

flag bench
  description: Enable building benchmark harness
  default: False
  manual: True

library
  hs-source-dirs:      common
  default-language:    Haskell2010

  exposed-modules:
    Advent
    Advent.Chinese
    Advent.Coord
    Advent.Format
    Advent.PQueue
    Advent.Queue
    Advent.Search

  other-modules:
    Advent.Format.Lexer
    Advent.Format.Parser
    Advent.Format.Types

  build-tool-depends: alex:alex, happy:happy

  build-depends:
    base             ^>= 4.15,
    array            ^>= 0.5.4,
    containers       ^>= 0.6,
    template-haskell ^>= 2.17,

  if flag(bench)
    exposed-modules: Advent.Bench
    build-depends:
      criterion    ^>= 1.5.9,
      deepseq      ^>= 1.4,

common day
  hs-source-dirs:      execs
  build-depends:       advent2021, base
  default-language:    Haskell2010

executable Day01
  import:              day
  main-is:             Day01.hs

executable Day02
  import:              day
  main-is:             Day02.hs


executable Day03
  import:              day
  main-is:             Day03.hs
