cabal-version:       2.4
name:                advent2021
version:             0.1.0.0
category:            None
synopsis:            Advent of Code 2021 Solutions
description:         These are my cleaned-up solutions to the Advent of Code
                     programming game. <https://adventofcode.com>
license:             ISC
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@gmail.com
copyright:           2021 Eric Mertens
homepage:            https://github.com/glguy/advent2021
bug-reports:         https://github.com/glguy/advent2021/issues
build-type:          Simple
data-files:          inputs/*.txt

source-repository head
  type: git
  location: https://github.com/glguy/advent2021

flag bench
  description: Enable building benchmark harness
  default: False
  manual: True

library
  hs-source-dirs:      common
  default-language:    Haskell2010

  exposed-modules:
    Advent
    Advent.Chinese
    Advent.Coord
    Advent.Coord3
    Advent.Format
    Advent.Input
    Advent.Prelude
    Advent.PQueue
    Advent.Queue
    Advent.Search
    Advent.SmallSet

  other-modules:
    Advent.Format.Lexer
    Advent.Format.Parser
    Advent.Format.Types

  build-tool-depends: alex:alex, happy:happy

  build-depends:
    base             ^>= 4.15 || ^>= 4.16,
    array            ^>= 0.5.4,
    containers       ^>= 0.6,
    template-haskell ^>= 2.17 || ^>= 2.18,
    MemoTrie         ^>= 0.6,

  if flag(bench)
    exposed-modules: Advent.Bench
    build-depends:
      criterion    ^>= 1.5.11,
      deepseq      ^>= 1.4,

test-suite doctests
  type:          exitcode-stdio-1.0
  ghc-options:   -threaded
  main-is:       doctests.hs
  default-language: Haskell2010

  build-depends:
    base,
    doctest   ^>= 0.20,
    directory ^>= 1.3,
    filepath  ^>= 1.4,

common day
  hs-source-dirs:      execs
  build-depends:       advent2021, base
  default-language:    Haskell2010
  other-modules:       Dummy

executable Day01
  import:              day
  main-is:             Day01.hs

executable Day02
  import:              day
  main-is:             Day02.hs

executable Day03
  import:              day
  main-is:             Day03.hs

executable Day04
  import:              day
  main-is:             Day04.hs

executable Day05
  import:              day
  main-is:             Day05.hs

executable Day06
  import:              day
  main-is:             Day06.hs
  build-depends:       containers

executable Day07
  import:              day
  main-is:             Day07.hs

executable Day08
  import:              day
  main-is:             Day08.hs
  build-depends:       containers

executable Day09
  import:              day
  main-is:             Day09.hs
  build-depends:       array

executable Day10
  import:              day
  main-is:             Day10.hs

executable Day11
  import:              day
  main-is:             Day11.hs
  build-depends:       containers

executable Day12
  import:              day
  main-is:             Day12.hs
  build-depends:       containers

executable Day13
  import:              day
  main-is:             Day13.hs
  build-depends:       containers

executable Day14
  import:              day
  main-is:             Day14.hs
  build-depends:       containers

executable Day15
  import:              day
  main-is:             Day15.hs
  build-depends:       array

executable Day16
  import:              day
  main-is:             Day16.hs

executable Day17
  import:              day
  main-is:             Day17.hs

executable Day18
  import:              day
  main-is:             Day18.hs

executable Day19
  import:              day
  main-is:             Day19.hs
  build-depends:       containers

executable Day20
  import:              day
  main-is:             Day20.hs
  build-depends:       containers

executable Day21
  import:              day
  main-is:             Day21.hs
  build-depends:       containers, transformers
